feat(auth): add swagger docs schema
